# uniswap-mcp-server

./: .gitignore  README.md  pyproject.toml  server.py
src/: config.py  main.py  server.py
src/prompts/: __init__.py  analyze.py  swap.py
src/resources/: __init__.py  addresses.py  network.py
src/tools/: __init__.py  pools.py  prices.py  swaps.py  tokens.py
src/uniswap_client/: __init__.py  addresses.py
src/uniswap_client/abis/: __init__.py  get_abi.py
src/uniswap_client/contracts/: __init__.py  base.py  erc20.py  v2_factory.py  v2_pair.py  v3_factory.py  v3_pool.py  v3_quoter.py  v3_router.py
src/uniswap_client/core/: __init__.py  client.py
src/uniswap_client/utils/: __init__.py
tests/: conftest.py  test_abis.py  test_addresses.py  test_client.py  test_config.py  test_contracts.py  test_prompts.py  test_resources.py  test_tools.py
