[project]
name = "uniswap-mcp-server"
version = "0.1.0"
description = "MCP server for uniswap"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.0",
    "pydantic>=2.13.4",
    "web3>=7.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
